# Soniox

./: .gitmodules  Caddyfile  README.md  docker-compose.yml  pricing.md  prompt_backup.md  tools.py
.claude/: settings.json
docs/: architecture.md  docker_commands.md  llms-full.txt  llms.txt  n8n-parkash-sweets-order-workflow.json  pending_items_on_store.md  phone-calls.md  pos_api.md  pos_architecture.md  pos_integration_flow.md  server_commands.md  soniox-api.md  soniox-voice-agent-demo.md  stack.md  store.md
docs/commands/: docker_commands.md  local_commands.md  server_commands.md
soniox_examples/apps/soniox-voice-bot-demo/: menu.json
soniox_examples/apps/soniox-voice-bot-demo/frontend/: Dockerfile  vite.config.ts
soniox_examples/apps/soniox-voice-bot-demo/frontend/src/: App.tsx  index.css  vite-env.d.ts
soniox_examples/apps/soniox-voice-bot-demo/server/: .env.example  Dockerfile  clover.py  clover_types.py  main.py  messages.py  pyproject.toml  seed_clover_menu.py  session.py  square_client.py  tools.py  tools1.py  tts_substitutions.py
soniox_examples/apps/soniox-voice-bot-demo/server/Prompts/: prompt-02-06-2026.md  prompt-04-06-2026.md  prompt-22 5 2026.md
soniox_examples/apps/soniox-voice-bot-demo/square-store-api/: Dockerfile  main.py  requirements.txt
soniox_examples/apps/soniox-voice-bot-demo/store-api/: Dockerfile  main.py
soniox_examples/apps/soniox-voice-bot-demo/twilio/: .env.example  Dockerfile  generate_opening_greeting.py  main.py  pyproject.toml
src/: .env.example  requirements.txt
(+14 files in other folders)
